[package]
name = "input-linux-sys"
version = "0.1.3"
authors = ["arcnmx", "meh. <meh@schizofreni.co>", "Corey Richardson <corey@octayn.net>"]

description = "Bindings for <linux/{u,}input.h>"
keywords = ["linux", "input", "evdev", "uinput"]

documentation = "http://arcnmx.github.io/input-linux-sys-rs/input_linux_sys"
repository = "https://github.com/arcnmx/input-linux-sys-rs"
readme = "README.md"
license = "MIT"

[dependencies]
libc = "^0.2.30"
nix = "^0.9.0"
