[package]
name = "input-linux-sys"
version = "0.4.0"
authors = ["arcnmx", "meh. <meh@schizofreni.co>", "Corey Richardson <corey@octayn.net>"]

description = "Bindings for <linux/{u,}input.h>"
keywords = ["linux", "input", "evdev", "uinput"]

documentation = "https://docs.rs/input-linux-sys/*/input_linux_sys"
repository = "https://github.com/arcnmx/input-linux-sys-rs"
readme = "README.md"
license = "MIT"

[dependencies]
libc = "^0.2.36"
nix = "^0.18.0"
