[package]
name = "input-linux-sys"
version = "0.8.1"
authors = ["arcnmx", "meh. <meh@schizofreni.co>", "Corey Richardson <corey@octayn.net>"]
edition = "2018"

description = "Bindings for <linux/{u,}input.h>"
keywords = ["linux", "input", "evdev", "uinput"]

documentation = "https://docs.rs/input-linux-sys/*/input_linux_sys"
repository = "https://github.com/arcnmx/input-linux-sys-rs"
readme = "README.md"
license = "MIT"

include = [
	"src/**/*.rs",
	"/README*",
	"/COPYING*",
]

[dependencies]
libc = "0.2"
nix = "0.26"
